--- a/client/src/assets/sass/auth/auth.scss
+++ b/client/src/assets/sass/auth/auth.scss
@@ -1,80 +1,190 @@
-.auth-wrapper {
-    width: 800px;
-    height: 440px;
-    background-color: #fff;
-    box-shadow: 0px 2px 50px rgb(0 0 0 / 20%);
-    border-radius: 4px;
-    overflow: hidden;
-    position: relative;
+* {
+    margin: 0 ;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
     display: flex;
-    align-items: center;
     justify-content: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    &__left {
-        width: 50%;
-        height: 100%;
-        overflow: hidden;
-        img {
-            width: auto;
-            height: 100%;
-        }
+    align-items: center;
+    min-height: 100vh;
+    background: #03a9f4;
+    transition: 0.5s;
+}
+
+body.active {
+    background: #f43648;
+}
+
+.container {
+    position: relative;
+    width: 800px;
+    height: 500px;
+    margin: 20px;
+}
+
+.blueBg {
+    position: absolute;
+    top: 40px;
+    width: 100%;
+    height: 420px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.15);
+}
+
+.blueBg .box {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blueBg .box h2 {
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.blueBg .box button {
+    cursor: pointer;
+    padding: 10px 20px;
+    background: #fff;
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+}
+
+.formBx {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.25);
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+.formBx.active {
+   left: 50%; 
+}
+
+.formBx .form{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 50px;
+    transition: 0.5s;
+}
+
+.formBx .signinForm {
+    transition-delay: 0.25s;
+}
+
+.formBx.active .signinForm {
+    left: -100%;
+    transition-delay: 0s;
+}
+
+.formBx .signupForm {
+    left: 100%;
+    transition-delay: 0s;
+}
+
+.formBx.active .signupForm {
+    left: 0;
+    transition-delay: 0.25s;
+}
+
+.formBx .signupForm form input[type="submit"] {
+    background: #03a9f4;
+    border: none;
+    color: #fff;
+    max-width: 130px;
+    cursor: pointer;
+}
+
+.formBx.active .signupForm form input[type="submit"] {
+    background: #f43648;
+}
+
+.formBx .form form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.formBx .form form h3 {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.formBx .form form input {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    outline: none;
+    font-size: 16px;
+    border: 1px solid #333;
+}
+
+.formBx .signinForm form input[type="submit"] {
+    background: #03a9f4;
+    border: none;
+    color: #fff;
+    max-width: 100px;
+    cursor: pointer;
+}
+
+.formBx .form form .forgot {
+    color: #333;
+}
+
+@media (max-width: 991px) {
+    .container {
+        max-width: 400px;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    &__right {
-        width: 50%;
+    .container .blueBg {
+        top: 0;
         height: 100%;
-        padding: 40px;
-        h2 {
-            color: #000;
-            font-size: 20px;
-            letter-spacing: -0.00933333em;
-            font-weight: 600;
-            padding-bottom: 15px;
-        }
-        .form-group {
-            position: relative;
-            padding-top: 15px;
-            margin-top: 10px;
-            input {
-                font-family: inherit;
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                border: 0;
-                font-size: 16px;
-                color: #000;
-                border-radius: 0;
-                &[type="text"], &[type="password"] {
-                    width: 100%;
-                    height: 40px;
-                    border-bottom: 1px solid #aaaaaa;
-                }
-                &+label {
-                    position: absolute;
-                    top: 0;
-                    opacity: 1;
-                    transform: translateY(5px);
-                    color: #aaa;
-                    font-weight: 300;
-                    font-size: 13px;
-                    letter-spacing: -0.00933333em;
-                    transition: all 0.2s ease-out
-                }
-                &:placeholder-shown + label {
-                    opacity: 0;
-                    transform: translateY(15px);
-                }
-            }
-        }
-        .checkbox-container {
-            display: flex;
-            margin-top: 35px;
-        }
-        .button-area {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 30px;
-        }
+
+    }
+    .formBx {
+        width: 100%;
+        height: 500px;
+        top: 0;
+        box-shadow: none;
+    }
+    .blueBg .box {
+        position: absolute;
+        width: 100%;
+        height: 150px;
+        bottom: 0;
+    }
+    .blueBg .box.signin {
+       top: 0; 
+    }
+    .formBx.active {
+        left: 0;
+        top: 150px;
     }
 }
