--- a/client/src/assets/sass/main.scss
+++ b/client/src/assets/sass/main.scss
@@ -3,10 +3,15 @@
 @import 'themes/all.scss';
 
 body {
-    background: #3b0266;
-    padding: .75rem 2rem !important;
-    overflow-y: auto;
-    height: calc(100vh - 1.50rem) !important;
+    background: var(--background);
+    &.nav-open {
+        .content {
+            transform: translateX(260px);
+        }
+        aside {
+            transform: initial;
+        }
+    }
 }
 
 #app {
@@ -19,4 +24,16 @@ body {
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+}
+
+body * {
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+button {
+    background: initial;
+    border: none;
+
 }
