--- a/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/theme.scss
+++ b/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/theme.scss
@@ -7,6 +7,7 @@
 @import "mixins/mixins";
 
 // Core Components - extra styling
+@import "auth";
 @import "alert";
 @import "avatars";
 @import "badge";
