--- a/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/_cards.scss
+++ b/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/_cards.scss
@@ -36,4 +36,13 @@
   }
 }
 
+.addUser {
+  position: fixed;
+  width: 90%;
+  max-width: 450px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @import 'cards/card-background';
