live search and mass import

--- a/client/src/assets/sass/auth/auth.scss
+++ b/client/src/assets/sass/auth/auth.scss
@@ -8,7 +8,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: top;
     min-height: 100vh;
     background: #03a9f4;
     transition: 0.5s;
