--- a/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/_tables.scss
+++ b/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/_tables.scss
@@ -1,5 +1,9 @@
 // General styles
-
+@media screen and (min-width: 1200px) {
+  .main-content {
+    width: calc(100vw - 300px);
+  }
+}
 .table {
   thead th {
     padding: $table-head-spacer-y $table-head-spacer-x;
@@ -42,4 +46,48 @@
   > :not(:last-child) > :last-child > * {
     border-bottom-color: $light;
   }
+}
+.addItem {
+  appearance: none;
+  background: #2ecc71;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  order: 2;
+}
+.modal {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 10px;
+  z-index: 99999;
+  padding: 25px;
+  label {
+    display: block;
+  }
+  .close {
+    width: 24px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    img {
+      width: 100%;
+    }
+  }
+  &-overlay {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+  }
+}
+.live-search {
+  width: 250px;
+  order: 1;
 }
