--- a/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/auth.scss
+++ b/client/vue-soft-ui-dashboard-main/src/assets/scss/soft-ui-dashboard/auth.scss
@@ -8,7 +8,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: top;
     min-height: 100vh;
     background: #03a9f4;
     transition: 0.5s;
